# vscode-wxwidgets-test

./: .gitignore  README.md  meson.build
buildscripts/: build-debug.sh  clean-debug.sh  rebuild-debug.sh
include/: sanitycheck.h
irrelevant-build-files/: makefile.bcc  makefile.gcc  makefile.vc
src/: meson.build  sanitycheck.cpp
